# contratos_alunos

./: .gitignore  README.md  main.py  pyproject.toml
listas_envio/: teste.xlsx
listas_envio/enviados/: alunos-24-12-04.xlsx
modules/: database.py  lista_envio.py  postmark.py
